# ros2_stu

./: .gitignore  README.md  git_pw
study/chapt1/my_first_prog/: CMakeLists.txt  myFirstLinuxCpp.cpp  myFirstLinuxPy.py
study/chapt5/: rviz_tf.rviz
study/chapt6/: CHANGES.md
study/chapt6/chapt6_ws/: AGENTS.md  frames_2025-10-31_16.13.47.gv
study/chapt6/chapt6_ws/src/fishbot_description/: CMakeLists.txt  package.xml
study/chapt6/chapt6_ws/src/fishbot_description/config/: controllers.yaml  display_robot_model.rviz  fishbot_controllers.yaml  ros_gz_bridge.yaml
study/chapt6/chapt6_ws/src/fishbot_description/launch/: display_robot.launch.py  fishbot_ros2control.launch.py  fishbot_ros2control.launch.xml  gz_sim.launch.py  gz_sim_fishbot.launch.xml
study/chapt6/chapt6_ws/src/fishbot_description/scripts/: laser_frame_fix.py
study/chapt6/chapt6_ws/src/fishbot_description/urdf/: first_robot.urdf
study/chapt6/chapt6_ws/src/fishbot_description/urdf/fishbot/: base.urdf.xacro  common_inertia.xacro  fishbot.gv  fishbot.urdf  fishbot.urdf.xacro
study/chapt6/chapt6_ws/src/fishbot_description/urdf/fishbot/actuator/: caster.urdf.xacro  wheel.urdf.xacro
study/chapt6/chapt6_ws/src/fishbot_description/urdf/fishbot/plugins/: fishbot_gazebo.xacro
study/chapt6/chapt6_ws/src/fishbot_description/urdf/fishbot/ros2_control/: mobile_base.ros2_control.xacro
study/chapt6/chapt6_ws/src/fishbot_description/urdf/fishbot/sensor/: camera.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
study/chapt6/chapt6_ws/src/fishbot_description/worlds/: .gitkeep  empty.sdf  model.sdf  test_world.sdf
(+102 files in other folders)
